--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,15 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    
+    - name: Gradle Build Action
+      uses: gradle/gradle-build-action@v2.0.1
+      with:
+        gradle-executable: gradlew
+        gradle-version: 7.2
+        arguments: build
+        cache-disabled: false
+        cache-read-only: true
     - name: Build with Gradle
       run: ./gradlew build
     - name: Test
