--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and test on develop branch
 
 on:
   push:
@@ -23,13 +23,20 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
-    - name: Gradle Build Action
+    - name: Gradle Build
       uses: gradle/gradle-build-action@v2.0.1
       with:
         gradle-version: 7.2
         cache-disabled: false
-        cache-read-only: true
-    - name: Build with Gradle
-      run: ./gradlew -v
-    #- name: Test
-     # run: ./gradlew test
+        cache-read-only: false
+        arguments: |
+                    build
+                    --stracktrace
+                    
+    - name: Gradle Test
+      uses: gradle/gradle-build-action@v2.0.1
+      with:
+        gradle-version: 7.2
+        cache-disabled: false
+        cache-read-only: false
+        arguments: test
