--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,7 @@ jobs:
         cache-disabled: false
         cache-read-only: false
         arguments: |
-                    build
-                    --stracktrace
+                    test
                     
     - name: Gradle Test
       uses: gradle/gradle-build-action@v2.0.1
