--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,23 +20,20 @@ jobs:
         distribution: 'adopt'
         cache: gradle
 
+    - name: Setup Android SDK Tools
+  # You may pin to the exact commit or the version.
+  # uses: android-actions/setup-android@72fdd2e74f58fb338a2743720c0847b8becf1589
+      uses: android-actions/setup-android@v2.0.2
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
     - name: Gradle Build
       uses: gradle/gradle-build-action@v2.0.1
       with:
-        gradle-version: 7.2
+        gradle-version: 6.8
         cache-disabled: false
         cache-read-only: false
         arguments: |
-                    build
-                    --warning-mode=all
+                    test
                     
-    - name: Gradle Test
-      uses: gradle/gradle-build-action@v2.0.1
-      with:
-        gradle-version: 7.2
-        cache-disabled: false
-        cache-read-only: false
-        arguments: test
+    - run: ./gradlew test
