--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,11 @@ jobs:
         distribution: 'adopt'
         cache: gradle
 
-    - name: Setup Android SDK Tools
-  # You may pin to the exact commit or the version.
-  # uses: android-actions/setup-android@72fdd2e74f58fb338a2743720c0847b8becf1589
-      uses: android-actions/setup-android@v2.0.2
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+
+    - name: Build SampleApplication
+      run: ./gradlew --no-daemon build
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
