--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
         distribution: 'adopt'
         cache: gradle
 
-    - name: Android Builder
-      uses: b4s36t4/Android-Action@0.0.1
+    - name: Android Build
+      uses: vgaidarji/android-github-actions-build@v1.0.1
     - run: gradle -v
     - run: ./gradlew test
     - name: Setup Android SDK
